# ai-digital-employee

./: .env.example  .gitignore  AI数字员工系统_第一迭代报告.md  AI数字员工系统_第三迭代报告.md  AI数字员工系统_第二迭代报告.md  AI数字员工项目技术方案书.docx  docker-compose.yml  运行命令.txt
backend/: .env.example  Dockerfile  MEMORY_INTEGRATION.md  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  datetime_utils.py
backend/app/agents/: __init__.py  router_agent.py
backend/app/api/: __init__.py  router.py
backend/app/api/endpoints/: __init__.py  auth.py  chat.py  meetings.py  memory.py  notifications.py  statistics.py  todos.py
backend/app/middleware/: __init__.py  auth.py  rate_limiter.py
backend/app/models/: __init__.py  conversation.py  meeting_room.py  reservation.py  todo.py  user.py  user_memory.py
backend/app/schemas/: __init__.py  chat.py  meeting.py  notification.py  todo.py  user.py
backend/app/services/: __init__.py  cache_service.py  conversation_service.py  fastgpt_service.py  meeting_service.py  memory_service.py  reminder_service.py  todo_service.py  weather_service.py
backend/app/tools/: __init__.py  fastgpt_tools.py  meeting_tools.py  todo_tools.py  weather_tools.py
backend/migrations/: 002_add_user_memories.sql  init.sql
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: auth.js  chat.js  meeting.js  memory.js  notification.js  request.js  statistics.js  todo.js
postman/: AI数字员工系统-第二迭代测试.postman_collection.json  第二迭代_截图操作步骤.md  第二迭代_数据库验证.sql
(+19 files in other folders)
